Further flesh out JavadocParameterTest